@@ -6,6 +6,7 @@ Done for version 2.13.0 (released ??/10/2020):
 
   Added
      1- examples/pari.f90: example FORTRAN binding
+     2- [libpari] quodif
 
 Done for version 2.12.1 (released 16/09/2020):
   Fixed
